--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "homepage": "https://github.com/wpseed/inertia-laravel-crud-generator",
     "keywords": ["inertia", "laravel", "crud", "generator"],
     "require": {
-        "illuminate/support": "~7|~8"
+        "illuminate/support": "~7|~8|~9|~10"
     },
     "require-dev": {
         "phpunit/phpunit": "~9.0",
